Added manual redirect on 404
Signed-off-by: George Araújo <george.gcac@gmail.com>

--- a/404.html
+++ b/404.html
@@ -9,4 +9,4 @@ redirect: true
 <!-- We should use the message in all languages, since jekyll-multiple-languages-plugin can't handle the 404 page. -->
 <!-- https://github.com/kurtsson/jekyll-multiple-languages-plugin/issues/156#issuecomment-636135905 -->
 <p>You will be redirected to the main page within 3 seconds. If not redirected, please go back to the <a href="{{ site.baseurl }}/">home page</a>.</p>
-<p>Você será redirecionado para a página principal em 3 segundos. Se não for redirecionado, por favor volte para a <a href="{{ site.baseurl }}/">página principal</a>.</p>
+<p>Você será redirecionado para a página principal em 3 segundos. Se não for redirecionado, por favor volte para a <a href="{{ site.baseurl }}/pt-br/">página principal</a>.</p>
